<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ngombe Planner</string>
    <string name="title_activity_farmer_registration">Register Farmer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cow_registration">Cow Registration</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_milk_production">Milk Production</string>
    <string name="title_activity_milk_procution_history">Production History</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_add_event">Add an Event</string>
    <string name="title_activity_events_history">Past Events</string>
    <string name="english">English</string>
    <string name="swahili">Kiswahili</string>
    <string name="nandi">Nandi</string>
    <string name="kipsigis">Kipsigis</string>
    <string name="lutsotso">Lutsotso</string>
    <string name="kikabrasi">Kikabrasi</string>
    <string name="title_activity_fertility">Fertility</string>
    <string name="title_activity_add_milk_production">Add Milk Production</string>
    <string name="title_activity_edit_farmer">Edit Farmer</string>
    <string name="title_activity_edit_farmer_selection">EditFarmerSelection</string>
    <string name="title_activity_edit_cow">Edit Cow</string>
    <string name="title_activity_cow_selection">CowSelectionActivity</string>

</resources>